# omelette

./: .gitignore  README.md  pyproject.toml  serverless.yml
omelette/: __init__.py
omelette/cli/: main.py  recipe.py  validators.py
omelette/cli/.templates/: fargate_recipe_template.py
omelette/cli/templates/project/: cookiecutter.json
omelette/cli/templates/project/{{cookiecutter.git_repo_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  serverless.yml
omelette/cli/templates/recipe/docker/: cookiecutter.json
omelette/cli/templates/recipe/docker/{{cookiecutter.recipe_name}}/: functional.py  object_oriented.py
omelette/cli/templates/recipe/lambda/{{cookiecutter.recipe_name}}/: functional.py  object_oriented.py
omelette/cli/templates/recipe/lambda/{{cookiecutter.recipe_name}}/jobs/example/: settings.toml
omelette/core/: recipe.py
omelette/eggs/: __init__.py  files.py  kafka.py  s3.py  sftp.py  sftp_s3_interface.py  slack.py  snowflake.py
omelette/examples/: fargate_recipe_example.py  settings.toml
omelette/examples/add/: class_example_fargate.py  class_example_lambda.py  functional_example_fargate.py  functional_example_lambda.py
omelette/examples/add/jobs/test/: settings.toml
omelette/recipe/: __init__.py  lambda_recipe.py  recipe.py  recipe_template.py
omelette/utils/: logging.py  settings.py
