[tool.poetry]
name = "omelette"
version = "0.1.5"
description = "Serverless Python ETL, Made  ̶O̶v̶e̶r̶ Easy"
authors = ["Ryan Whitten <ryan.whitten@bestegg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
typer = {version = "^0.3.2", extras = ["all"]}
questionary = "^1.9.0"
boto3 = "^1.17.10"
python-dotenv = "^0.15.0"
tomlkit = "^0.7.0"
python-box = "^5.3.0"
snowflake-connector-python = "^2.3.3"
pysftp = "^0.2.9"
slackclient = "^2.9.3"
python-gnupg = "^0.4.6"
kafka-python = "^2.0.2"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
omelette = 'omelette.cli.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

