[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
omelette = {git = "https://github.com/MarletteFunding/omelette", rev = "{{cookiecutter.omelette_version}}"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
